fix: modal content height on mobile resolution

--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -152,7 +152,7 @@
     .modal__content {
         top: calc(50% + 30px);
         min-width: 320px;
-        min-height: 90%;
+        min-height: auto;
     }
 
     .modal__input-group {
